--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <img src="img/logo.png">
         <h1>ExchangeCoin Static API Mock</h1>
         <p>If you want to add your stake pool to the list please open pull request on <a href="https://github.com/EXCCoin/excc-api">GitHub</a>.</p>
+
+        <br>
+        <h3>Available endpoints:</h3>
+        <ul>
+            <li><a href="v1/stakepools.json">/v1/stakepools.json</a></li>
+        </ul>
     </div>
 </body>
 
