--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <h3>Available endpoints:</h3>
         <ul>
             <li><a href="v1/stakepools.json">/v1/stakepools.json</a></li>
+            <li><a href="v1/explorer.json">/v1/explorer.json</a></li> 
         </ul>
     </div>
 </body>
