Update api to work with TestNet

--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
 </head>
 
 <body>
-    <div style="text-align: center; margin-top: 100px;">
+    <div>
         <img src="img/logo.png">
         <h1>ExchangeCoin Static API Mock</h1>
         <p>If you want to add your stake pool to the list please open pull request on <a href="https://github.com/EXCCoin/excc-api">GitHub</a>.</p>
 
         <br>
         <h3>Available endpoints:</h3>
-        <ul>
+        <ul>Mainnet:
             <li><a href="v1/stakepools.json">/v1/stakepools.json</a></li>
-            <li><a href="v1/explorer.json">/v1/explorer.json</a></li> 
+            <li><a href="v1/explorer.json">/v1/explorer.json</a></li>
+            <li><a href="v1/mainnet/stakepools.json">/v1/mainnet/stakepools.json</a></li>
+            <li><a href="v1/mainnet/explorer.json">/v1/mainnet/explorer.json</a></li>
+        </ul>
+        <br>
+        <ul>Testnet:
+            <li><a href="v1/testnet/stakepools.json">/v1/testnet/stakepools.json</a></li>
+            <li><a href="v1/testnet/explorer.json">/v1/testnet/explorer.json</a></li>
         </ul>
     </div>
 </body>
